style: fix horizontal overflow
Horizontal overflow no longer creates horizontal scrollbar

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,7 @@ body
   color: white
   font-family: monospace, monaco
   margin: 0
+  overflow-x: hidden
 
 main
   display: flex
